--- a/sample.env
+++ b/sample.env
@@ -1,10 +1,10 @@
-SESSION_NAME=
-BOT_TOKEN=
-API_ID=
-API_HASH=
-SUDO_USERS=
-OWNER_ID=
+SESSION_NAME=BABSNFMpwzGPD4-KHjnG3hJ-pTFQKOmpOckWmfYiaNyfYVXbj6hi0jDHvMSpXVFxztr6TCMWJ_XJWa_D8TNme3sxwc3ymuWweeRfYvIU-sMhpQdds-0O05eakZ6pLcVvn2-1BLtqrP-QFe9L7oycgbIBXmMcDLQsqdUQQdDFcCbl6KWjnxRKbIxvMe3EAPeJuSfyq-xdnuvmviM6jOMCMUD-655AXzt4qci0t3UFSJtXAFA7Oz7MPB-qsCmMsGP2lm57V2iCn-TEdmxFW5CUWkagTvYDN8PPyg91M4b7nEeHAlNKQ5m9jtlz2WEhOJ-9FJ1o-xFt1nvh3Ho7JwdRaGboAAAAAS6VeJAA
+BOT_TOKEN=5739937035:AAF4h-mM5QD9xKkXq_tT-hx4pGXkxW2pzVg
+API_ID=17357369
+API_HASH=46da8af2f3a14d8a14fcfd9180ba56ba
+SUDO_USERS=1221134259
+OWNER_ID=1221134259
 DURATION_LIMIT=540000
-MONGO_DB_URI=
-LOG_GROUP_ID=
-ASS_ID=
+MONGO_DB_URI=mongodb+srv://FARMA:farma@cluster0.dtigu.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+LOG_GROUP_ID=-1001150107625
+ASS_ID=5076514960
